<resources>
    <string name="app_name">Victim Services Toronto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>

    <string-array name="categories_array">
        <item>Books</item>
        <item>Movies</item>
    </string-array>

    <!-- questionnaire_init -->
    <string name="safe_plan_logo_desc">SafePlan logo</string>
    <string name="safe_plan">SafePlan</string>
    <string name="power_icon">Power icon</string>
    <string name="progress_text">0% Complete</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="relationship_prompt">Which best describes your relationship status?</string>
    <string name="option_still">Still in a relationship</string>
    <string name="option_leaving">Planning to leave</string>
    <string name="option_post">Post-separation</string>
    <string name="next">Next</string>
    <string name="storage_of_emergency_info">Storage of Emergency Info</string>
    <string name="disclaimer">Please note this app is NOT a substitute for emergency services.</string>
    <string name="PlanDisclaimer">"Please note safety plans are personal and NOT guaranteed to protect you from harm</string>



    <!-- reminder_options -->
    <string-array name="frequency_options">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>



</resources>