<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_peach"
    android:padding="24dp">
    <!-- Top bar -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logoIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_safe_plan_logo"
            android:contentDescription="@string/safe_plan_logo_desc" />

        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_plan"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textColor="@color/black_bean" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/powerButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_power"
            android:background="@drawable/power_circle"
            android:contentDescription="@string/power_icon"
            android:padding="12dp" />

        </LinearLayout>
        <!--end of top bar -->


    <TextView
        android:id="@+id/storage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Storage of Emergency Info"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black_bean"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/current_files"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/current_files"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Current Files"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black_bean"
        app:layout_constraintTop_toBottomOf="@id/storage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/files"
        android:layout_marginTop="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/files"
        android:layout_width="0dp"
        android:layout_height="320dp"
        app:layout_constraintTop_toBottomOf="@id/current_files"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/top_buttons"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/files"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp">


        <Button
            android:id="@+id/documents_button"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:text="Documents to Pack"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/contacts_button"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:text="Emergency Contacts"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/top_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/safe_locations_button"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:text="Safe Location"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />


        <Button
            android:id="@+id/medications_button"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:text="Medications"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>