<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background_peach"
android:padding="24dp">
<!-- Top bar -->
<LinearLayout
    android:id="@+id/topBar"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ImageView
    android:id="@+id/logoIcon"
    android:layout_width="28dp"
    android:layout_height="28dp"
    android:src="@drawable/ic_safe_plan_logo"
    android:contentDescription="@string/safe_plan_logo_desc" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe_plan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:textColor="@color/black_bean" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/powerButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_power"
        android:background="@drawable/power_circle"
        android:contentDescription="@string/power_icon"
        android:padding="12dp" />

</LinearLayout>
    <LinearLayout
        android:id="@+id/editingArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/documents_to_pack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Documents_to_pack"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black_bean"
            app:layout_constraintTop_toBottomOf="@id/editingArea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/add_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/documents_to_pack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/black_bean"
            android:background="@color/white"
            android:hint="Type Document Path"
            />

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Add Document"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            />
        <EditText
            android:id="@+id/old_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/black_bean"
            android:background="@color/white"
            android:hint="Type Old Document Path"
            />
        <EditText
            android:id="@+id/new_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/black_bean"
            android:background="@color/white"
            android:hint="Type New Document Path"
            />


        <Button
            android:id="@+id/replace_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Replace Document"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            />
        <EditText
            android:id="@+id/delete_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/black_bean"
            android:background="@color/white"
            android:hint="Type Document Path To Delete"
            />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Delete Document"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>